--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,10 @@ jobs:
     steps:
       # 작업에서 액세스할 수 있도록 $GITHUB_WORKSPACE에서 저장소를 체크아웃합니다.
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
+        with :
+          java-version : '17'
+          distribution : 'adopt'
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
