--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,21 +15,18 @@ on:
 # workflow는 한개 이상의 job을 가지며, 각 job은 여러 step에 따라 단계를 나눌 수 있습니다.
 jobs:
   build:
-    # 해당 workflow를 어떤 OS 환경에서 실행할 것인지 지정
-    runs-on: ubuntu-latest
-
-    # step은 작업의 일부로 실행될 일련의 작업을 나타냅니다.
+    runs-on: ubuntu-latest # 3 실행 환경 지정
+    #4 실행스텝지정
     steps:
-      # 작업에서 액세스할 수 있도록 $GITHUB_WORKSPACE에서 저장소를 체크아웃합니다.
-      - name: Checkout
-        uses: actions/checkout@v3
-        with :
-          java-version : '17'
-          distribution : 'adopt'
-
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'adopt'
+          java-version: '17'
       - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
-        shell: bash
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew clean build
       
       - name: Build with Gradle
         run: ./gradlew build
